--- a/index.html
+++ b/index.html
@@ -8,12 +8,103 @@
         <link rel="icon" type="image/x-icon" href="images/favicon/favicon-32x32.ico" sizes="32x32" />
         <link rel="icon" type="image/x-icon" href="images/favicon/favicon-16x16.ico" sizes="16x16" />
         <link rel="icon" type="image/x-icon" href="images/favicon/favicon-96x96.ico" sizes="96x96" />
-
+        <meta name="viewport" content="width=devicewidth, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/style.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
-
+    <header>
+        <nav>
+            <h1>
+                Der Zeitmaschinist
+            </h1>
+            <ul>
+                <li><a href=".">Ausstatung</a></li>
+                <li><a href=".">Stores</a></li>
+                <li><a href=".">Team</a></li>
+                <li><a href=".">Kontakt</a></li>
+            </ul>
+        </nav>
+        <div id="main_heading">
+            <span>Neu</span>
+            <h1>Das Zeitmaschinenauto</h1>
+            <h2><a href="#helle_infokarten">Designed zum Entdecken</a></h2>
+        </div>
+        <div id="dunkle_infokarten">
+            <div class="dunkle_karte">
+                <div class="icon">
+                    <img src="images/icons/fan.svg">
+                </div>
+                <div class="text">
+                    <p class="ueberschrift">
+                        4 Flux Triebwerke
+                    </p>
+                    <p class="beschreibung">
+                        Das von uns patentierte Flux Triebwerk ist das Erste seiner Art. Es vereint die Leistung einer Turbine mit der Lärmbilanz eines E&#8209;Motors.
+                    </p>
+                </div>
+            </div>
+            <div class="dunkle_karte">
+                <div class="icon">
+                    <img src="images/icons/battery-full.svg">
+                </div>
+                <div class="text">
+                     <p class="ueberschrift">
+                        Flux Akku
+                     </p>
+                    <p class="beschreibung">
+                        Unser hochkapazitiver Flux Akku hat die 1000&#8209;fache Energiedichte einer Autobatterie. So erhalten wir Reichweiten von bis zu 3000 Jahren.
+                     </p>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div id="helle_infokarten">
+        <div class="helle_karte">
+            <img src="../images/icons/mic.svg">
+            <h2>Sprachsteuerung</h2>
+            <p>
+                Kontrollieren Sie alle Funktionen Ihres Zeitmaschinenautos per Sprachsteuerung. Das Auto erkennt dabei Ihre Stimme und reagiert nur, wenn Sie sprechen. Die 16 Richtmikrofone erlauben es Sie selbst bei Entfernungen von bis zu 800 Metern noch zuverlässig zu verstehen.
+            </p>
+        </div>
+        <div class="helle_karte">
+            <img src="../images/icons/geo-alt-fill.svg">
+            <h2>Navigation</h2>
+            <p>
+                Das brandneue Navigationssystem navigiert Sie nun durch Zeit und Raum. Geben Sie einfach ein, zu welcher Zeit Sie ankommen möchten, um den Rest kümmern wir uns. Dabei können Sie bis zu 3000 Jahre überwinden.
+            </p>
+        </div>
+        <div class="helle_karte">
+            <img src="../images/icons/fingerprint.svg">
+            <h2>Fingerabdrucksensor</h2>
+            <p>
+                Wir alle kennen den Moment in dem man sich fragt: "Wo habe ich den Schlüssel hingelegt?". Das wird in Zukunft kein Problem mehr darstellen, denn mit unserem Fingerabdrucksensor, der im Türgriff und Zündschloss integriert ist, steigen Sie ganz bequem ohne Schlüssel ein.
+            </p>
+        </div>
+    </div>
+    <div id="footer">
+        <div class="footer_column">
+            <h3>
+                Über uns
+            </h3>
+            <ul>
+                <li><a href=".">Unser Ziel</a></li>
+                <li><a href=".">Unsere Werte</a></li>
+                <li><a href=".">Unser Team</a></li>
+            </ul>
+        </div>
+        <div class="footer_column">
+            <h3>
+                Zu dieser Seite
+            </h3>
+            <ul>
+                <li><a href=".">Impressum</a></li>
+                <li><a href=".">Webmaster kontaktieren</a></li>
+            </ul>
+        </div>
+    </div>
     </body>
 
 </html>
