--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
     </header>
     <div id="bright_infocards">
         <div class="bright_card">
-            <img src="../images/icons/mic.svg">
+            <img src="images/icons/mic.svg">
             <h2>Sprachsteuerung</h2>
             <p>
                 Kontrollieren Sie alle Funktionen Ihres Zeitmaschinenautos per Sprachsteuerung. Das Auto erkennt dabei Ihre Stimme und reagiert nur, wenn Sie sprechen. Die 16 Richtmikrofone erlauben es Sie selbst bei Entfernungen von bis zu 800 Metern noch zuverlässig zu verstehen.
             </p>
         </div>
         <div class="bright_card">
-            <img src="../images/icons/geo-alt-fill.svg">
+            <img src="images/icons/geo-alt-fill.svg">
             <h2>Navigation</h2>
             <p>
                 Das brandneue Navigationssystem navigiert Sie nun durch Zeit und Raum. Geben Sie einfach ein, zu welcher Zeit Sie ankommen möchten, um den Rest kümmern wir uns. Dabei können Sie bis zu 3000 Jahre überwinden.
             </p>
         </div>
         <div class="bright_card">
-            <img src="../images/icons/fingerprint.svg">
+            <img src="images/icons/fingerprint.svg">
             <h2>Fingerabdrucksensor</h2>
             <p>
                 Wir alle kennen den Moment in dem man sich fragt: "Wo habe ich den Schlüssel hingelegt?". Das wird in Zukunft kein Problem mehr darstellen, denn mit unserem Fingerabdrucksensor, der im Türgriff und Zündschloss integriert ist, steigen Sie ganz bequem ohne Schlüssel ein.
